--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,10 @@
 		"wikimedia/wait-condition-loop": "2.0.2",
 		"wikimedia/wrappedstring": "4.0.1",
 		"wikimedia/xmp-reader": "0.9.1",
-		"zordius/lightncandy": "1.2.6"
+		"zordius/lightncandy": "1.2.6",
+		"erusev/parsedown": "*",
+		"erusev/parsedown-extra": "*",
+		"benjaminhoegh/parsedown-extended": "*"
 	},
 	"require-dev": {
 		"composer/spdx-licenses": "1.5.7",
