--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,7 @@
 		"wikimedia/xmp-reader": "0.9.1",
 		"zordius/lightncandy": "1.2.6",
 		"erusev/parsedown": "1.7.4",
-		"erusev/parsedown-extra": "*",
+		"erusev/parsedown-extra": "0.8.1",
 		"benjaminhoegh/parsedown-extended": "*"
 	},
 	"require-dev": {
